--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <ul>
                      <li><a href="#">Sign In</a></li>
                      <li>
-                        <a href="#"><button class="sign-up">Sign Up</button></a>
+                        <button class="sign-up">Sign Up</button>
                      </li>
                   </ul>
                </nav>
